--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.5.2/dist/web3.min.js"></script>
   <script src="vendor/@truffle/contract/dist/truffle-contract.min.js"></script>
+  <script src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js" type="text/javascript">
+  </script>
   <script src="app.js"></script>
 </head>
 
@@ -148,19 +150,3 @@
 </body>
 
 </html>
-
-<!-- <script type="text/javascript">
-async function likeTweet(elem) {
-	const BASE_URL = "http://localhost:3000";
-	const response = await axios.post(`${BASE_URL}/like-tweet`, {
-		id: elem.id
-	});
-}
-
-async function unlikeTweet(elem) {
-	const BASE_URL = "http://localhost:3000";
-	const response = await axios.post(`${BASE_URL}/unlike-tweet`, {
-		id: elem.id
-	});
-}
-</script> -->
