--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./style.css" />
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.5.2/dist/web3.min.js"></script>
-  <script src="vendor/@truffle/contract/dist/truffle-contract.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.5.2/dist/web3.min.js"></script>
+  <script src="vendor/@truffle/contract/dist/truffle-contract.min.js"></script> -->
   <script src="https://cdn.ethers.io/lib/ethers-5.1.umd.min.js" type="text/javascript">
   </script>
   <script src="app.js"></script>
